--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
+edition = "2021"
 name = "trid"
-version = "0.1.1-alpha"
+version = "0.2.0-alpha"
 description = "Turkish citizenship ID number type"
 readme = "README.md"
 homepage = "https://github.com/ssg/trid"
