--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,7 +19,10 @@
 			"problemMatcher": [
 				"$rustc"
 			],
-			"group": "test",
+			"group": {
+				"kind": "test",
+				"isDefault": true
+			},
 			"label": "Rust: cargo test - trid"
 		}
 	]
