--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 edition = "2021"
 name = "trid"
-version = "0.2.0-alpha"
+version = "0.2.1-alpha"
 description = "Turkish citizenship ID number type"
 readme = "README.md"
 homepage = "https://github.com/ssg/trid"
+repository = "https://github.com/ssg/trid"
 authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
 license = "Apache-2.0"
+keywords = ["Turkish ID Number"]
