--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ repository = "https://github.com/ssg/trid"
 authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
 license = "Apache-2.0"
 keywords = ["turkish", "turkey", "id", "number"]
+categories = ["parser-implementations"]
