--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "trid"
-version = "0.4.0-alpha"
+version = "1.0.0"
 description = "Turkish citizenship ID number type"
 readme = "README.md"
 homepage = "https://github.com/ssg/trid"
