--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
   test:
     runs-on: ubuntu-latest    
     steps:
+    - uses: actions/checkout@v3
     - name: Run tests
       run: cargo test --verbose
 
@@ -27,5 +28,6 @@ jobs:
     needs: ['build', 'test']
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Publish
       run: cargo publish --verbose
