--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,4 +30,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Publish
-      run: cargo publish --verbose
+      run: cargo publish --verbose --token ${CARGO_REGISTRY_TOKEN}
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
