--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,5 +14,8 @@ jobs:
     runs-on: ubuntu-latest    
     steps:
     - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
     - name: Run tests
       run: cargo test --verbose
