--- a/tridgen/Cargo.toml
+++ b/tridgen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "tridgen"
-version = "0.1.0"
+version = "0.2.0"
 description = "Turkish citizenship ID generator"
 readme = "README.md"
 homepage = "https://github.com/ssg/trid"
@@ -14,6 +14,7 @@ categories = ["command-line-utilities"]
 [dependencies]
 trid = { version = "*", path = "../trid" }
 rand = "0.8.5"
+clap = { version = "4.3.2", features = ["derive"] }
 
 [[bin]]
 name = "tridgen"
