--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,46 +1,46 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in library 'trid'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--lib",
-                    "--package=trid"
-                ],
-                "filter": {
-                    "name": "trid",
-                    "kind": "lib"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug integration test 'is_valid'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--test=is_valid",
-                    "--package=trid"
-                ],
-                "filter": {
-                    "name": "is_valid",
-                    "kind": "test"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Run 'tridgen'",
+      "cargo": {
+        "args": ["run", "--package=tridgen"]
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug unit tests in library 'trid'",
+      "cargo": {
+        "args": ["test", "--no-run", "--lib", "--package=trid"],
+        "filter": {
+          "name": "trid",
+          "kind": "lib"
         }
-    ]
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug integration test 'is_valid'",
+      "cargo": {
+        "args": ["test", "--no-run", "--test=is_valid", "--package=trid"],
+        "filter": {
+          "name": "is_valid",
+          "kind": "test"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    }
+  ]
 }
