add more clippy lints

--- a/trid/Cargo.toml
+++ b/trid/Cargo.toml
@@ -13,3 +13,11 @@ categories = ["parser-implementations"]
 
 [lib]
 name = "trid"
+
+[lints.clippy]
+indexing_slicing = "deny"
+fallible_impl_from = "deny"
+wildcard_enum_match_arm = "deny"
+unneeded_field_pattern = "deny"
+fn_params_excessive_bools = "deny"
+must_use_candidate = "deny"
