update README path

--- a/trid/Cargo.toml
+++ b/trid/Cargo.toml
@@ -3,7 +3,7 @@ edition = "2021"
 name = "trid"
 version = "6.0.0"
 description = "Turkish citizenship ID number type"
-readme = "README.md"
+readme = "../README.md"
 homepage = "https://github.com/ssg/trid"
 repository = "https://github.com/ssg/trid"
 authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
