update README path

--- a/tridgen/Cargo.toml
+++ b/tridgen/Cargo.toml
@@ -3,7 +3,7 @@ edition = "2021"
 name = "tridgen"
 version = "0.2.1"
 description = "Turkish citizenship ID generator"
-readme = "README.md"
+readme = "../README.md"
 homepage = "https://github.com/ssg/trid"
 repository = "https://github.com/ssg/trid"
 authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
