--- a/tridgen/Cargo.toml
+++ b/tridgen/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["turkish", "turkey", "id", "number", "generator"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-trid = { version = "*", path = "../trid" }
+trid = { version = "6.0.0", path = "../trid" }
 rand = "0.9.2"
 clap = { version = "4.3.2", features = ["derive"] }
 
